# cte-project

./: .coverage  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/sample/: clean_sample.parquet  cte_sample.csv  demo_persona.json  sample_jd.txt  sample_persona.json  synthetic_90d.csv  synthetic_90d_clean.parquet
docs/: COLLECT_YOUR_DATA.md  eda_summary.txt  project_story.md
notebooks/: 01_EDA.ipynb  02_Features.ipynb  03_Baselines.ipynb  04_Modeling.ipynb  05_TraitScoring.ipynb  06_Persona_LLM.ipynb
notebooks/reports/: baseline_leaderboard.csv  baseline_modelcard.json  eda_summary.json  feature_catalog.csv
scripts/: cte_app.py  cte_cli.py  generate_demo_persona.py
src/cte/: data.py  features.py  nlp.py  openai_util.py  persona.py  report.py  requirements.py  scoring.py  synthetic.py
tests/: __init__.py  conftest.py  test_data.py  test_scoring.py  test_synthetic.py
